@@ -58,6 +58,7 @@ void ActionShapeBrowser(int* params);
 void ActionCreateShape(int* params);
 void ActionDeleteObject(int* params);
 void ActionDeleteSelected(int *params);
+void ActionMoveSelected(int *params);
 void ActionToggleEggs(int* params);
 void ActionGodMode(int* params);
 void ActionGender(int* params);
