@@ -1,7 +1,11 @@
 2002-05-09  Jeff Freedman  <jeff@amy.nerble.net>
 
-	* keys.cc,defaultkeys.txt,etc:  DEL key deletes selected objects.
+	* data/bg/defaultkeys.txt,keyactions.cc,keys.cc:  Ctrl-arrow and
+	page keys move the selected objects.
+	* cheat.cc: move_selected() moves all the selected objects.
+
 	* cheat.cc (Cheat): Maintain list of selected objects.
+	* keys.cc,defaultkeys.txt,etc:  DEL key deletes selected objects.
 	* exult.cc:  Select dropped object/combo.
 	* gamewin.cc:  In 'select' mode, clicking an object toggles
 	whether it's selected.
